# PublicSlots

./: CMakeLists.txt  README.md  main.cpp
DataBase/Manage/header/: Backup.h  Enter.h  Manage.h  Modify.h
DataBase/Manage/source/: Backup.cpp  Enter.cpp  Manage.cpp  Modify.cpp
DataBase/Show/header/: Calculate.h  Handle.h
DataBase/Show/source/: Calculate.cpp  Handle.cpp
QtModule/form/: addfieldwindow.ui  addformwindow.ui  addwindow.ui  backupwindow.ui  delfieldwindow.ui  delformwindow.ui  delwindow.ui  mainwindow.ui  sortwindow.ui  ui_addfieldwindow.h  ui_addformwindow.h  ui_addwindow.h  ui_backupwindow.h  ui_delfieldwindow.h  ui_delformwindow.h  ui_delwindow.h  ui_mainwindow.h  ui_sortwindow.h
QtModule/header/: addfieldwindow.h  addformwindow.h  addwindow.h  backupwindow.h  delfieldwindow.h  delformwindow.h  delwindow.h  mainwindow.h  sortwindow.h
QtModule/source/: addfieldwindow.cpp  addformwindow.cpp  addwindow.cpp  backupwindow.cpp  delfieldwindow.cpp  delformwindow.cpp  delwindow.cpp  mainwindow.cpp  sortwindow.cpp
Slots/header/: Slots.h
Slots/source/: Slots.cpp
Tools/header/: ScoreType.h  tools.h
Tools/source/: ScoreType.cpp  tools.cpp
assets/: takeatry.qrc
